Componentes/sgcWebSockets Professional 2022.1 for D7-11 Alexandria Source/libD11/sgcWebSocket_WinAPI.hpp

typedef void __stdcall (*WINHTTP_STATUS_CALLBACK)(void * hInternet, void * dwContext, unsigned dwInternetStatus, void * lpvStatusInformation, unsigned dwStatusInformationLength);
typedef WINHTTP_STATUS_CALLBACK TWinHttpStatusCallback;
typedef WINHTTP_WEB_SOCKET_CLOSE_STATUS *PWINHTTP_WEB_SOCKET_CLOSE_STATUS;
typedef System::LongBool __stdcall (*TsgcWinHttpCheckPlatform)(void);
typedef System::LongBool __stdcall (*TsgcWinHttpCloseHandle)(void * hInternet);
typedef void * __stdcall (*TsgcWinHttpOpen)(System::WideChar * pszAgentW, unsigned dwAccessType, System::WideChar * pszProxyW, System::WideChar * pszProxyBypassW, unsigned dwFlags);
typedef void * __stdcall (*TsgcWinHttpConnect)(void * hSession, System::WideChar * pswzServerName, System::Word nServerPort, unsigned dwReserved);
typedef void * __stdcall (*TsgcWinHttpOpenRequest)(void * hConnect, System::WideChar * pwszVerb, System::WideChar * pwszObjectName, System::WideChar * pwszVersion, System::WideChar * pwszReferrer, Winapi::Windows::PLPWSTR ppwszAcceptTypes, unsigned dwFlags);
typedef System::LongBool __stdcall (*TsgcWinHttpSetTimeouts)(void * hInternet, int nResolveTimeout, int nConnectTimeout, int nSendTimeout, int nReceiveTimeout);
typedef System::LongBool __stdcall (*TsgcWinHttpSetOption)(void * hInternet, unsigned dwOption, void * lpBuffer, unsigned dwBufferLength);
typedef System::LongBool __stdcall (*TsgcWinHttpSetCredentials)(void * hRequest, unsigned AuthTargets, unsigned AuthScheme, System::WideChar * pwszUserName, System::WideChar * pwszPassword, void * pAuthParams);
typedef System::LongBool __stdcall (*TsgcWinHttpAddRequestHeaders)(void * hRequest, System::WideChar * pwszHeaders, unsigned dwHeadersLength, unsigned dwModifiers);
typedef System::LongBool __stdcall (*TsgcWinHttpSendRequest)(void * hRequest, System::WideChar * lpszHeaders, unsigned dwHeadersLength, void * lpOptional, unsigned dwOptionalLength, unsigned dwTotalLength, NativeUInt dwContext);
typedef System::LongBool __stdcall (*TsgcWinHttpReceiveResponse)(void * hRequest, void * lpReserved);
typedef System::LongBool __stdcall (*TsgcWinHttpQueryHeaders)(void * hRequest, unsigned dwInfoLevel, System::WideChar * pwszName, void * lpBuffer, unsigned* lpdwBufferLength, unsigned* lpdwIndex);
typedef WINHTTP_STATUS_CALLBACK __stdcall (*TsgcWinHttpSetStatusCallback)(void * hInternet, WINHTTP_STATUS_CALLBACK lpfnInternetCallback, unsigned dwNotificationFlags, NativeUInt dwReserved);
typedef unsigned __stdcall (*TsgcWinHttpWebSocketClose)(void * hWebSocket, System::Word usStatus, void * pvReason, unsigned dwReasonLength);
typedef void * __stdcall (*TsgcWinHttpWebSocketCompleteUpgrade)(void * hRequest, NativeUInt pContext);
typedef unsigned __stdcall (*TsgcWinHttpWebSocketQueryCloseStatus)(void * hRequest, PWINHTTP_WEB_SOCKET_CLOSE_STATUS pusStatus, void * pvReason, unsigned dwReasonLength, unsigned* pdwReasonLengthConsumed);
typedef unsigned __stdcall (*TsgcWinHttpWebSocketReceive)(void * hWebSocket, void * pvBuffer, unsigned dwBufferLength, void * pdwBytesRead, void * peBufferType);
typedef unsigned __stdcall (*TsgcWinHttpWebSocketSend)(void * hWebSocket, int eBufferType, void * pvBuffer, unsigned dwBufferLength);
typedef unsigned __stdcall (*TsgcWinHttpWebSocketShutdown)(void * hWebSocket, System::Word usStatus, void * pvReason, unsigned dwReasonLength);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpCheckPlatform(void);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpCloseHandle(void * hInternet);
extern DELPHI_PACKAGE void * __stdcall WinHttpOpen(System::WideChar * pszAgentW, unsigned dwAccessType, System::WideChar * pszProxyW, System::WideChar * pszProxyBypassW, unsigned dwFlags);
extern DELPHI_PACKAGE void * __stdcall WinHttpConnect(void * hSession, System::WideChar * pswzServerName, System::Word nServerPort, unsigned dwReserved);
extern DELPHI_PACKAGE void * __stdcall WinHttpOpenRequest(void * hConnect, System::WideChar * pwszVerb, System::WideChar * pwszObjectName, System::WideChar * pwszVersion, System::WideChar * pwszReferrer, Winapi::Windows::PLPWSTR ppwszAcceptTypes, unsigned dwFlags);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpSetTimeouts(void * hInternet, int nResolveTimeout, int nConnectTimeout, int nSendTimeout, int nReceiveTimeout);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpSetOption(void * hInternet, unsigned dwOption, void * lpBuffer, unsigned dwBufferLength);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpSetCredentials(void * hRequest, unsigned AuthTargets, unsigned AuthScheme, System::WideChar * pwszUserName, System::WideChar * pwszPassword, void * pAuthParams);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpAddRequestHeaders(void * hRequest, System::WideChar * pwszHeaders, unsigned dwHeadersLength, unsigned dwModifiers);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpSendRequest(void * hRequest, System::WideChar * lpszHeaders, unsigned dwHeadersLength, void * lpOptional, unsigned dwOptionalLength, unsigned dwTotalLength, NativeUInt dwContext);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpReceiveResponse(void * hRequest, void * lpReserved);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpQueryHeaders(void * hRequest, unsigned dwInfoLevel, System::WideChar * pwszName, void * lpBuffer, unsigned* lpdwBufferLength, unsigned* lpdwIndex);
extern DELPHI_PACKAGE WINHTTP_STATUS_CALLBACK __stdcall WinHttpSetStatusCallback(void * hInternet, WINHTTP_STATUS_CALLBACK lpfnInternetCallback, unsigned dwNotificationFlags, NativeUInt dwReserved);
extern DELPHI_PACKAGE unsigned __stdcall WinHttpWebSocketClose(void * hWebSocket, System::Word usStatus, void * pvReason, unsigned dwReasonLength);
extern DELPHI_PACKAGE void * __stdcall WinHttpWebSocketCompleteUpgrade(void * hRequest, NativeUInt pContext);
extern DELPHI_PACKAGE unsigned __stdcall WinHttpWebSocketQueryCloseStatus(void * hRequest, PWINHTTP_WEB_SOCKET_CLOSE_STATUS pusStatus, void * pvReason, unsigned dwReasonLength, unsigned* pdwReasonLengthConsumed);
extern DELPHI_PACKAGE unsigned __stdcall WinHttpWebSocketReceive(void * hWebSocket, void * pvBuffer, unsigned dwBufferLength, void * pdwBytesRead, void * peBufferType);
extern DELPHI_PACKAGE unsigned __stdcall WinHttpWebSocketSend(void * hWebSocket, WINHTTP_WEB_SOCKET_BUFFER_TYPE eBufferType, void * pvBuffer, unsigned dwBufferLength);
extern DELPHI_PACKAGE unsigned __stdcall WinHttpWebSocketShutdown(void * hWebSocket, System::Word usStatus, void * pvReason, unsigned dwReasonLength);