Componentes/sgcWebSockets Professional 2022.1 for D7-11 Alexandria Source/Source/sgcWebSocket_WinAPI.pas


Type
TsgcWinHttpSetTimeouts = function(hInternet: HINTERNET; nResolveTimeout: Integer; nConnectTimeout: Integer;
  nSendTimeout: Integer; nReceiveTimeout: Integer): BOOL; stdcall;
function WinHttpSetTimeouts(hInternet: HINTERNET; nResolveTimeout: Integer; nConnectTimeout: Integer;
  nSendTimeout: Integer; nReceiveTimeout: Integer): BOOL; stdcall;

Type
TsgcWinHttpSetOption = function(hInternet: HINTERNET; dwOption: DWORD;
  lpBuffer: Pointer; dwBufferLength: DWORD): BOOL; stdcall;
function WinHttpSetOption(hInternet: HINTERNET; dwOption: DWORD;
  lpBuffer: Pointer; dwBufferLength: DWORD): BOOL; stdcall;

Type
TsgcWinHttpSetCredentials = function(hRequest: HINTERNET; AuthTargets: DWORD; AuthScheme: DWORD; pwszUserName: LPCWSTR;
  pwszPassword: LPCWSTR; pAuthParams: Pointer): BOOL; stdcall;
function WinHttpSetCredentials(hRequest: HINTERNET; AuthTargets: DWORD; AuthScheme: DWORD; pwszUserName: LPCWSTR;
  pwszPassword: LPCWSTR; pAuthParams: Pointer): BOOL; stdcall;

Type
TsgcWinHttpAddRequestHeaders = function(hRequest: HINTERNET; pwszHeaders: LPCWSTR; dwHeadersLength: DWORD;
  dwModifiers: DWORD): BOOL; stdcall;
function WinHttpAddRequestHeaders(hRequest: HINTERNET; pwszHeaders: LPCWSTR; dwHeadersLength: DWORD;
  dwModifiers: DWORD): BOOL; stdcall;

Type
TsgcWinHttpSendRequest = function(hRequest: HINTERNET; lpszHeaders: LPCWSTR;
  dwHeadersLength: DWORD; lpOptional: Pointer; dwOptionalLength: DWORD;
  dwTotalLength: DWORD; dwContext: DWORD_PTR): BOOL; stdcall;
function WinHttpSendRequest(hRequest: HINTERNET; lpszHeaders: LPCWSTR;
  dwHeadersLength: DWORD; lpOptional: Pointer; dwOptionalLength: DWORD;
  dwTotalLength: DWORD; dwContext: DWORD_PTR): BOOL; stdcall;

Type
TsgcWinHttpReceiveResponse = function(hRequest: HINTERNET; lpReserved: Pointer): BOOL; stdcall;
function WinHttpReceiveResponse(hRequest: HINTERNET; lpReserved: Pointer): BOOL; stdcall;

Type
TsgcWinHttpQueryHeaders = function(hRequest: HINTERNET; dwInfoLevel: DWORD; pwszName: LPCWSTR; lpBuffer: LPVOID; lpdwBufferLength: LPDWORD; lpdwIndex: LPDWORD): BOOL; stdcall;
function WinHttpQueryHeaders(hRequest: HINTERNET; dwInfoLevel: DWORD; pwszName: LPCWSTR; lpBuffer: LPVOID; lpdwBufferLength: LPDWORD; lpdwIndex: LPDWORD): BOOL; stdcall;

Type
TsgcWinHttpSetStatusCallback = function(hInternet: HINTERNET; lpfnInternetCallback: TWinHttpStatusCallback; dwNotificationFlags: DWORD; dwReserved: DWORD_PTR): TWinHttpStatusCallback; stdcall;
function WinHttpSetStatusCallback(hInternet: HINTERNET; lpfnInternetCallback: TWinHttpStatusCallback; dwNotificationFlags: DWORD; dwReserved: DWORD_PTR): TWinHttpStatusCallback; stdcall;




Type
TsgcWinHttpWebSocketClose = function(hWebSocket: HINTERNET; usStatus: USHORT; pvReason: PVOID; dwReasonLength: DWORD): DWORD; stdcall;
function WinHttpWebSocketClose(hWebSocket: HINTERNET; usStatus: USHORT; pvReason: PVOID; dwReasonLength: DWORD): DWORD; stdcall;

Type
TsgcWinHttpWebSocketCompleteUpgrade = function(hRequest: HINTERNET; pContext: DWORD_PTR): HINTERNET; stdcall;
function WinHttpWebSocketCompleteUpgrade(hRequest: HINTERNET; pContext: DWORD_PTR): HINTERNET; stdcall;

Type
TsgcWinHttpWebSocketQueryCloseStatus = function(hRequest: HINTERNET; pusStatus: PWINHTTP_WEB_SOCKET_CLOSE_STATUS; pvReason: PVOID; dwReasonLength: DWORD; pdwReasonLengthConsumed: PDWORD): DWORD; stdcall;
function WinHttpWebSocketQueryCloseStatus(hRequest: HINTERNET; pusStatus: PWINHTTP_WEB_SOCKET_CLOSE_STATUS; pvReason: PVOID; dwReasonLength: DWORD; pdwReasonLengthConsumed: PDWORD): DWORD; stdcall;

Type
TsgcWinHttpWebSocketReceive = function(hWebSocket: HINTERNET; pvBuffer: PVOID; dwBufferLength: DWORD; pdwBytesRead: Pointer; peBufferType: Pointer): DWORD; stdcall;
function WinHttpWebSocketReceive(hWebSocket: HINTERNET; pvBuffer: PVOID; dwBufferLength: DWORD; pdwBytesRead: Pointer; peBufferType: Pointer): DWORD; stdcall;

Type
TsgcWinHttpWebSocketSend = function(hWebSocket: HINTERNET; eBufferType: Integer; pvBuffer: PVOID; dwBufferLength: DWORD): DWORD; stdcall;
function WinHttpWebSocketSend(hWebSocket: HINTERNET; eBufferType: WINHTTP_WEB_SOCKET_BUFFER_TYPE; pvBuffer: PVOID; dwBufferLength: DWORD): DWORD; stdcall;

Type
TsgcWinHttpWebSocketShutdown = function(hWebSocket: HINTERNET; usStatus: USHORT; pvReason: PVOID; dwReasonLength: DWORD): DWORD; stdcall;
function WinHttpWebSocketShutdown(hWebSocket: HINTERNET; usStatus: USHORT; pvReason: PVOID; dwReasonLength: DWORD): DWORD; stdcall;

{$ENDIF}


implementation

{$IFDEF SGC_WINHTTP}

const
  Winhttpapi = 'winhttp.dll';

{$IFNDEF SGC_WINHTTP_STATIC}
var
  oWinHttpCheckPlatform: TsgcWinHttpCheckPlatform = nil;
  oWinHttpCloseHandle: TsgcWinHttpCloseHandle = nil;
  oWinHttpOpen: TsgcWinHttpOpen = nil;
  oWinHttpConnect: TsgcWinHttpConnect = nil;
  oWinHttpOpenRequest: TsgcWinHttpOpenRequest = nil;
  oWinHttpSetTimeouts: TsgcWinHttpSetTimeouts = nil;
  oWinHttpSetOption: TsgcWinHttpSetOption = nil;
  oWinHttpSetCredentials: TsgcWinHttpSetCredentials = nil;
  oWinHttpAddRequestHeaders: TsgcWinHttpAddRequestHeaders = nil;
  oWinHttpSendRequest: TsgcWinHttpSendRequest = nil;
  oWinHttpReceiveResponse: TsgcWinHttpReceiveResponse = nil;
  oWinHttpQueryHeaders: TsgcWinHttpQueryHeaders = nil;
  oWinHttpSetStatusCallback: TsgcWinHttpSetStatusCallback = nil;
  oWinHttpWebSocketClose: TsgcWinHttpWebSocketClose = nil;
  oWinHttpWebSocketCompleteUpgrade: TsgcWinHttpWebSocketCompleteUpgrade = nil;
  oWinHttpWebSocketQueryCloseStatus: TsgcWinHttpWebSocketQueryCloseStatus = nil;
  oWinHttpWebSocketReceive: TsgcWinHttpWebSocketReceive = nil;
  oWinHttpWebSocketSend: TsgcWinHttpWebSocketSend = nil;
  oWinHttpWebSocketShutdown: TsgcWinHttpWebSocketShutdown = nil;

var
  vInitialized: Boolean = False;
  vModule: HModule = 0;

procedure DoInitialize();
var
  oBuffer: array[0..255] of Char;
begin
  if not vInitialized then
  begin
    vModule := LoadLibrary(PChar(Winhttpapi));
    if (vModule <= HINSTANCE_ERROR) then
    begin
      ZeroMemory(@oBuffer, SizeOf(oBuffer));
      FormatMessage(FORMAT_MESSAGE_FROM_SYSTEM, nil, GetLastError(), 0, oBuffer, SizeOf(oBuffer), nil);
      raise Exception.Create(oBuffer);
    end;
    vInitialized := True;
  end;
end;

function WinHttpCheckPlatform: BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpCheckPlatform) then
    @oWinHttpCheckPlatform := GetProcAddress(vModule, 'WinHttpCheckPlatform');

  Result := oWinHttpCheckPlatform();
end;


function WinHttpCloseHandle(hInternet: HINTERNET): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpCloseHandle) then
    @oWinHttpCloseHandle := GetProcAddress(vModule, 'WinHttpCloseHandle');

  Result := oWinHttpCloseHandle(hInternet);
end;


function WinHttpOpen(pszAgentW: LPCWSTR; dwAccessType: DWORD; pszProxyW: LPCWSTR; pszProxyBypassW: LPCWSTR;
  dwFlags: DWORD): HINTERNET; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpOpen) then
    @oWinHttpOpen := GetProcAddress(vModule, 'WinHttpOpen');

  Result := oWinHttpOpen(pszAgentW, dwAccessType, pszProxyW, pszProxyBypassW, dwFlags);
end;


function WinHttpConnect(hSession: HINTERNET; pswzServerName: LPCWSTR; nServerPort: INTERNET_PORT;
  dwReserved: DWORD): HINTERNET; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpConnect) then
    @oWinHttpConnect := GetProcAddress(vModule, 'WinHttpConnect');

  Result := oWinHttpConnect(hSession, pswzServerName, nServerPort, dwReserved);
end;


function WinHttpOpenRequest(hConnect: HINTERNET; pwszVerb: LPCWSTR; pwszObjectName: LPCWSTR; pwszVersion: LPCWSTR;
  pwszReferrer: LPCWSTR; ppwszAcceptTypes: PLPWSTR; dwFlags: DWORD): HINTERNET; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpOpenRequest) then
    @oWinHttpOpenRequest := GetProcAddress(vModule, 'WinHttpOpenRequest');

  Result := oWinHttpOpenRequest(hConnect, pwszVerb, pwszObjectName, pwszVersion, pwszReferrer, ppwszAcceptTypes, dwFlags);
end;


function WinHttpSetTimeouts(hInternet: HINTERNET; nResolveTimeout: Integer; nConnectTimeout: Integer;
  nSendTimeout: Integer; nReceiveTimeout: Integer): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpSetTimeouts) then
    @oWinHttpSetTimeouts := GetProcAddress(vModule, 'WinHttpSetTimeouts');

  Result := oWinHttpSetTimeouts(hInternet, nResolveTimeout, nConnectTimeout, nSendTimeout, nReceiveTimeout);
end;


function WinHttpSetOption(hInternet: HINTERNET; dwOption: DWORD;
  lpBuffer: Pointer; dwBufferLength: DWORD): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpSetOption) then
    @oWinHttpSetOption := GetProcAddress(vModule, 'WinHttpSetOption');

  Result := oWinHttpSetOption(hInternet, dwOption, lpBuffer, dwBufferLength);
end;


function WinHttpSetCredentials(hRequest: HINTERNET; AuthTargets: DWORD; AuthScheme: DWORD; pwszUserName: LPCWSTR;
  pwszPassword: LPCWSTR; pAuthParams: Pointer): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpSetCredentials) then
    @oWinHttpSetCredentials := GetProcAddress(vModule, 'WinHttpSetCredentials');

  Result := oWinHttpSetCredentials(hRequest, AuthTargets, AuthScheme, pwszUserName, pwszPassword, pAuthParams);
end;


function WinHttpAddRequestHeaders(hRequest: HINTERNET; pwszHeaders: LPCWSTR; dwHeadersLength: DWORD;
  dwModifiers: DWORD): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpAddRequestHeaders) then
    @oWinHttpAddRequestHeaders := GetProcAddress(vModule, 'WinHttpAddRequestHeaders');

  Result := oWinHttpAddRequestHeaders(hRequest, pwszHeaders, dwHeadersLength, dwModifiers);
end;


function WinHttpSendRequest(hRequest: HINTERNET; lpszHeaders: LPCWSTR;
  dwHeadersLength: DWORD; lpOptional: Pointer; dwOptionalLength: DWORD;
  dwTotalLength: DWORD; dwContext: DWORD_PTR): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpSendRequest) then
    @oWinHttpSendRequest := GetProcAddress(vModule, 'WinHttpSendRequest');

  Result := oWinHttpSendRequest(hRequest, lpszHeaders, dwHeadersLength, lpOptional, dwOptionalLength, dwTotalLength, dwContext);
end;


function WinHttpReceiveResponse(hRequest: HINTERNET; lpReserved: Pointer): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpReceiveResponse) then
    @oWinHttpReceiveResponse := GetProcAddress(vModule, 'WinHttpReceiveResponse');

  Result := oWinHttpReceiveResponse(hRequest, lpReserved);
end;


function WinHttpQueryHeaders(hRequest: HINTERNET; dwInfoLevel: DWORD; pwszName: LPCWSTR; lpBuffer: LPVOID; lpdwBufferLength: LPDWORD; lpdwIndex: LPDWORD): BOOL; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpQueryHeaders) then
    @oWinHttpQueryHeaders := GetProcAddress(vModule, 'WinHttpQueryHeaders');

  Result := oWinHttpQueryHeaders(hRequest, dwInfoLevel, pwszName, lpBuffer, lpdwBufferLength, lpdwIndex);
end;


function WinHttpSetStatusCallback(hInternet: HINTERNET; lpfnInternetCallback: TWinHttpStatusCallback; dwNotificationFlags: DWORD; dwReserved: DWORD_PTR): TWinHttpStatusCallback; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpSetStatusCallback) then
    @oWinHttpSetStatusCallback := GetProcAddress(vModule, 'WinHttpSetStatusCallback');

  Result := oWinHttpSetStatusCallback(hInternet, lpfnInternetCallback, dwNotificationFlags, dwReserved);
end;


function WinHttpWebSocketClose(hWebSocket: HINTERNET; usStatus: USHORT; pvReason: PVOID; dwReasonLength: DWORD): DWORD; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpWebSocketClose) then
    @oWinHttpWebSocketClose := GetProcAddress(vModule, 'WinHttpWebSocketClose');

  Result := oWinHttpWebSocketClose(hWebSocket, usStatus, pvReason, dwReasonLength);
end;


function WinHttpWebSocketCompleteUpgrade(hRequest: HINTERNET; pContext: DWORD_PTR): HINTERNET; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpWebSocketCompleteUpgrade) then
    @oWinHttpWebSocketCompleteUpgrade := GetProcAddress(vModule, 'WinHttpWebSocketCompleteUpgrade');

  Result := oWinHttpWebSocketCompleteUpgrade(hRequest, pContext);
end;

